feat: added checkbox and completed strikethrough

--- a/style.css
+++ b/style.css
@@ -104,12 +104,26 @@ li {
 }
 
 #todoList p {
-  color: #8f98a8;
+  display: flex;
+  gap: 1rem;
+  color: var(--dark);
+  align-items: center;
+}
+
+#todoList .disabled {
+  color: #8f89a8;
 }
 
 .disabled {
   display: flex;
   text-decoration: line-through;
+}
+
+input[type="checkbox"] {
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  cursor: pointer;
 }
 
 input[type="checkbox"]::before {
@@ -124,7 +138,7 @@ input[type="checkbox"]::before {
   color: transparent;
 }
 
-input[type="checkbox"]::before::after {
+input[type="checkbox"]:checked::before {
   color: var(--white);
   background-color: var(--greem);
   border: 0.06rem solid var(--greem);
