--- a/style.css
+++ b/style.css
@@ -34,6 +34,11 @@ body {
   position: absolute;
   right: 0.5rem;
   bottom: 0.5rem;
+  cursor: pointer;
+}
+
+#deleteButton {
+  cursor: pointer;
 }
 
 h1,
